resolve overflow text

--- a/src/components/Input/styles.css
+++ b/src/components/Input/styles.css
@@ -6,5 +6,5 @@ input {
   padding: 10px;
   font-family: "Hubballi", cursive;
   font-size: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
