--- a/src/components/Item/styles.css
+++ b/src/components/Item/styles.css
@@ -1,13 +1,25 @@
 .item {
   width: 100%;
-  height: 40px;
+  height: 35px;
   text-align: left;
   font-family: "Hubballi", cursive;
   /* margin-left: 20px; */
-  font-size: 30px;
+  font-size: 25px;
   color: rgb(63, 62, 65);
   display: flex;
   justify-content: space-between;
+}
+
+li {
+  /* max-width: 300px; */
+  list-style-type: circle;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+li::marker {
+  display: inline-block !important;
+  opacity: 1 !important;
 }
 
 .delete {
